[gd_scene load_steps=3 format=3 uid="uid://clswwd8ld7jda"]

[ext_resource type="Script" path="res://scenes/map_escape_menu/map_escape_menu.gd" id="1_fo27v"]
[ext_resource type="PackedScene" uid="uid://dwwwcmbjvlht7" path="res://scenes/components/subcomponents/menu_buttons.tscn" id="1_mvshw"]

[node name="EscapeMenuLayer" type="CanvasLayer"]
script = ExtResource("1_fo27v")
on_back = 3

[node name="Buttons" parent="." instance=ExtResource("1_mvshw")]
anchors_preset = 4
anchor_left = 0.0
anchor_top = 0.5
anchor_right = 0.0
anchor_bottom = 0.5
offset_left = 0.0
offset_top = -171.5
offset_right = 356.0
offset_bottom = 171.5
grow_horizontal = 1
theme_override_constants/separation = 20

[node name="PlayButton" parent="Buttons" index="0"]
text = "Continue"

[connection signal="pressed" from="Buttons/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="Buttons/SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="Buttons/ExitButton" to="." method="custom_exit"]

[editable path="Buttons"]
